[package]
name = "vichess"
version = "1.0.0"
edition = "2024"

[dependencies]
macroquad = "0.4.14"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.android]
package_name = "com.sham.vichess"
label = "Vichess"
build_targets = ["aarch64-linux-android"]
orientation = "landscape"

[package.metadata.android.sdk]
target_sdk_version = 33
min_sdk_version = 21

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
